lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -42,10 +42,14 @@ Resources:
               KMSMasterKeyID: "aws/s3"
               SSEAlgorithm: "aws:kms"
       BucketName: !Ref S3BucketNameParam
-      CorsConfiguration: 
-        CorsConfiguration
       IntelligentTieringConfigurations: 
-        - IntelligentTieringConfiguration
+        - Id: !Sub "${S3BucketNameParam}-tiering"
+          Status: "Enabled"
+          Tierings: 
+          - AccessTier: "ARCHIVE_ACCESS"
+            Days: 7
+          - AccessTier: "DEEP_ARCHIVE_ACCESS"
+            Days: 14
       InventoryConfigurations: 
         - InventoryConfiguration
       LifecycleConfiguration: 
