lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -143,4 +143,4 @@ Outputs:
     Description: "Bucket DomainName"
     Value: !GetAtt S3EventStoreBucket.DomainName
     Export:
-      Name: !Sub "${AWS::StackName}-${S3EventStoreBucket}"
+      Name: !Sub "${AWS::StackName}-S3EventStoreBucketDomainName"
