lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -50,8 +50,7 @@ Resources:
       MessageRetentionPeriod: 86400
       QueueName: "S3EventStoreNotificationQueue"
       RedriveAllowPolicy:
-        redrivePermission: "byQueue"
-        sourceQueueArns: !GetAtt S3EventStoreNotificationDeadLetterQueue.Arn
+        redrivePermission: "allowAll"
       RedrivePolicy:
         deadLetterTargetArn : !GetAtt S3EventStoreNotificationDeadLetterQueue.Arn
         maxReceiveCount : 3
