lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -109,7 +109,7 @@ Resources:
           ServerSideEncryptionConfiguration: 
           - BucketKeyEnabled: true
             ServerSideEncryptionByDefault: 
-              KMSMasterKeyID: "aws/s3"
+              KMSMasterKeyID: "alias/aws/s3"
               SSEAlgorithm: "aws:kms"
       BucketName: !Ref S3EventBucketParam
       LifecycleConfiguration: 
