--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -31,12 +31,31 @@ Parameters:
 
 Resources:
 
+  LabKmsKey:
+    Type: AWS::KMS::Key
+    Properties: 
+      Description: "KMS Key to use"
+      Enabled: true
+      EnableKeyRotation: true
+      KeyPolicy:
+        Version: "2012-10-17"
+        Id: "lab-key"
+        Statement:
+        - Sid: "Allow Account Resources to use this key"
+          Effect: "Allow"
+          Principal:
+            AWS: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root"
+          Action: kms:*
+          Resource: "*"
+      MultiRegion: false
+      PendingWindowInDays: 7
+
   S3EventStoreNotificationDeadLetterQueue:
     Type: AWS::SQS::Queue
     DeletionPolicy: Delete
     UpdateReplacePolicy: Delete
     Properties: 
-      KmsMasterKeyId: "alias/aws/sqs"
+      KmsMasterKeyId: !Ref LabKmsKey
       MessageRetentionPeriod: 86400
       QueueName: "S3EventStoreNotificationDeadLetterQueue"
       VisibilityTimeout: 60
@@ -46,7 +65,7 @@ Resources:
     DeletionPolicy: Delete
     UpdateReplacePolicy: Delete
     Properties: 
-      KmsMasterKeyId: "alias/aws/sqs"
+      KmsMasterKeyId: !Ref LabKmsKey
       MessageRetentionPeriod: 86400
       QueueName: "S3EventStoreNotificationQueue"
       RedriveAllowPolicy:
@@ -61,7 +80,7 @@ Resources:
     Properties: 
       DisplayName: "S3EventStoreNotificationTopic"
       FifoTopic: false
-      KmsMasterKeyId: "alias/aws/sns"
+      KmsMasterKeyId: !Ref LabKmsKey
       Subscription:
       - Protocol: sqs
         Endpoint: !GetAtt S3EventStoreNotificationQueue.Arn
@@ -109,7 +128,7 @@ Resources:
           ServerSideEncryptionConfiguration: 
           - BucketKeyEnabled: true
             ServerSideEncryptionByDefault: 
-              KMSMasterKeyID: "alias/aws/s3"
+              KMSMasterKeyID: !Ref LabKmsKey
               SSEAlgorithm: "aws:kms"
       BucketName: !Ref S3EventBucketParam
       LifecycleConfiguration: 
