lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -138,25 +138,26 @@ Resources:
       Description: "Lambda role EventMockProcessingLambdaFunction"
       Policies:
       - PolicyName: EventMockProcessingLambdaFunctionPolicy01
-        PolicyDocument:  
+        PolicyDocument:
+          Version: '2012-10-17'
           Statement:
-          - Action:
+          - Effect: "Allow"
+            Action:
             - "logs:CreateLogGroup"
             - "logs:CreateLogStream"
             - "logs:PutLogEvents"
-            Effect: "Allow"
-            Resource: "arn:aws:logs:*:*:*"
+            Resource: arn:aws:logs:*:*:*
       - PolicyName: EventMockProcessingLambdaFunctionPolicy02
-        PolicyDocument:  
+        PolicyDocument:
+          Version: '2012-10-17'
           Statement:
-          - Effect: Allow
+          - Effect: "Allow"
             Action:
-            - sqs:ReceiveMessage
-            - sqs:DeleteMessage
-            - sqs:GetQueueAttributes
-            - sqs:ChangeMessageVisibility
+            - "sqs:ReceiveMessage"
+            - "sqs:DeleteMessage"
+            - "sqs:GetQueueAttributes"
+            - "sqs:ChangeMessageVisibility"
             Resource: !GetAtt S3EventStoreNotificationQueue.Arn
-        
       RoleName: EventMockProcessingLambdaFunctionRole
 
   EventMockProcessingLambdaFunction:
