lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -327,8 +327,8 @@ Resources:
         - "x-api-id"
         MaxAge: 86400
       Description: "The Internet facing HTTP API for publishing events from external sources, like web sites"
-      DisableExecuteApiEndpoint: true # For production, this will typically be disabled/false to force clients to use the custom domain
-      DisableSchemaValidation: true   # For production use we would have proper models defined and enforce validation
+      DisableExecuteApiEndpoint: false  # For production, this will typically be disabled/true to force clients to use the custom domain
+      DisableSchemaValidation: true     # For production use we would have proper models defined and enforce validation
       FailOnWarnings: false
       Name: "public-events"
       ProtocolType: "HTTP"
