lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -247,7 +247,7 @@ Resources:
       - "arm64"
       Environment:
           Variables: 
-            TARGET_STREAM_NAME : not-set
+            TARGET_STREAM_NAME : not-set  # TODO - set the name to the Kinesis stream name still to be defined
       Code: 
         ZipFile: |
           import json
