--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -238,6 +238,18 @@ Resources:
             Resource: !Sub arn:${AWS::Partition}:kinesis:*:${AWS::AccountId}:stream/*
       RoleName: ApiTest01EventLambdaFunctionRole
 
+  ApiTest01EventLambdaFunctionGroup:
+    Type: AWS::Logs::LogGroup
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
+    DependsOn: ApiTest01EventLambdaFunction
+    Properties:
+      LogGroupName:
+        Fn::Sub:
+        -  "/aws/lambda/${functionRef}"
+        - functionRef: !Ref ApiTest01EventLambdaFunction
+      RetentionInDays: 7
+
   ApiTest01EventLambdaFunction:
     Type: AWS::Lambda::Function
     Properties: 
