lab2: started work on the CloudFormation template

--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -166,6 +166,18 @@ Resources:
             Resource: !GetAtt S3EventStoreNotificationQueue.Arn
       RoleName: EventMockProcessingLambdaFunctionRole
 
+  EventMockProcessingLambdaFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
+    DependsOn: EventMockProcessingLambdaFunction
+    Properties:
+      LogGroupName:
+        Fn::Sub:
+        -  "/aws/lambda/${functionRef}"
+        - functionRef: !Ref EventMockProcessingLambdaFunction
+      RetentionInDays: 7
+
   EventMockProcessingLambdaFunction:
     Type: AWS::Lambda::Function
     Properties: 
