--- a/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
+++ b/labs/lab2-construct-cloudformation-template-from-lab1-findings/template.yaml
@@ -248,7 +248,7 @@ Resources:
             Action:
             - kinesis:PutRecord
             - kinesis:PutRecords
-            Resource: !Sub arn:${AWS::Partition}:kinesis:*:${AWS::AccountId}:stream/*
+            Resource: !GetAtt EventKinesisStream.Arn
       RoleName: ApiTest01EventLambdaFunctionRole
 
   ApiTest01EventLambdaFunctionLogGroup:
@@ -427,6 +427,54 @@ Resources:
       DefaultRouteSettings:
         ThrottlingBurstLimit: 10
         ThrottlingRateLimit: 10
+
+
+#######################################################################################################################
+###                                                                                                                 ###
+###                                      KINESIS EVENT INGESTION ROUTING TO S3                                      ###
+###                                                                                                                 ###
+#######################################################################################################################
+
+  EventKinesisStream:
+    Type: AWS::Kinesis::Stream
+    Properties: 
+      Name: "EventKinesisStream"
+      RetentionPeriodHours: 24
+      ShardCount: 2
+      StreamModeDetails: 
+          StreamMode: "ON_DEMAND"
+
+  EventKinesisDeliveryStream:
+    Type: AWS::KinesisFirehose::DeliveryStream
+    Properties: 
+      DeliveryStreamName: "EventKinesisDeliveryStream"
+      DeliveryStreamType: "KinesisStreamAsSource"
+      ExtendedS3DestinationConfiguration: 
+        BucketARN: !GetAtt S3EventStoreBucket.Arn
+        BufferingHints: 
+          IntervalInSeconds: 60
+          SizeInMBs: 1
+        CompressionFormat: "GZIP" # Take into consideration https://docs.aws.amazon.com/athena/latest/ug/compression-formats.html
+        DataFormatConversionConfiguration: 
+          DataFormatConversionConfiguration
+        DynamicPartitioningConfiguration: 
+          DynamicPartitioningConfiguration
+        EncryptionConfiguration: 
+          EncryptionConfiguration
+        ErrorOutputPrefix: String
+        Prefix: String
+        ProcessingConfiguration: 
+          ProcessingConfiguration
+        RoleARN: String
+        S3BackupConfiguration: 
+          S3DestinationConfiguration
+        S3BackupMode: String
+
+      KinesisStreamSourceConfiguration: 
+        KinesisStreamARN: !GetAtt EventKinesisStream.Arn
+        RoleARN: String
+
+
 
 
 Outputs:
