doc: starting to work on scenario

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "hexdigest",
         "kconvert",
         "Redrive",
+        "RFID",
         "Tierings",
         "traceback",
         "zcat"
