doc: started working on Lab 3 - mostly planning and thinking about what I will attempt to build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "hashlib",
         "hexdigest",
         "kconvert",
+        "prepopulate",
         "Redrive",
         "RFID",
         "Tierings",
