doc: started working on Lab 3 - starting to work on lambda functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,20 @@
 {
     "cSpell.words": [
         "architecting",
+        "bbbbafd",
         "boto",
+        "ccefab",
         "clazz",
         "Cooldown",
+        "dfcb",
+        "dfdc",
+        "eaefed",
+        "ecfdcb",
         "getenv",
         "hashlib",
         "hexdigest",
         "kconvert",
+        "nosql",
         "onboarded",
         "prepopulate",
         "Redrive",
